# secmutbench

./: .gitignore  CHANGELOG.md  CHANGELOG_2026-01-08.md  CLAUDE.md  DATASET_CARD.md  Dockerfile  LICENSE  README.md  build_db.sh  config.ini  croissant.json  datasheet.md  log-20260202-164716.txt  log-20260202-184235.txt  log-20260202-200514.txt  log-20260202-203306.txt  log-verification-20260202-204321.txt  log-verification-20260202-212434.txt  pyproject.toml  requirements.txt  run_evaluation.sh
agentic_pipeline/: AGENTIC_REWRITE_PLAN.md  IMPROVEMENTS_LOG.md  MULTI_AGENT_SYSTEM.md  README.md  config.yaml  run_agents.py
baselines/: batch_api.py  recover_judge.py  run_judge.py  run_judge_batch.py  run_judge_claude.py  run_judge_quality.py  run_judge_security.py  run_llm_baselines.py  run_static_analysis.py  together_batch.py
data/: dataset.json  dataset2.json  secmutbench.json  test_dataset.json  validation.json
docs/: DATASET_GENERATION_PLAN_v2.0_2026-01-06.md  EVALUATION_SUMMARY_v1.0_2026-01-06.md  PROJECT_SUMMARY_2026-01-06.md  REFLECTION_2026-01-06.md  SECMUTBENCH_DOCUMENTATION_2026-02-01.md  SECMUTBENCH_DOCUMENTATION_V2_2026-02-01.md  SECMUTBENCH_DOCUMENTATION_V3_2026-02-02.md  SECMUTBENCH_DOCUMENTATION_V4_2026-02-04.md  SECMUTBENCH_DOCUMENTATION_V5_2026-02-05.md  mock_contracts.md
evaluation/: __init__.py  attack_vectors.py  conftest_template.py  evaluate.py  llm_judge.py  metrics.py  mutation_engine.py  prompts.py  test_runner.py  validate_with_cweval.py  version.py
operators/: __init__.py  operator_registry.py  security_operators.py
results-legacy/: baseline_results_20260106_133132.json  baseline_results_20260106_135438.json  baseline_results_20260106_160443.json  baseline_results_20260106_200259.json  baseline_results_20260106_205853.json  baseline_results_20260106_215713.json  evaluation_report_20260106_133132.md  evaluation_report_20260106_135438.md  evaluation_report_20260106_160443.md  (+1 more)
scripts/: cwe_research.py  (+21 more)
(+87 files in other folders)
