[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secmutbench"
version = "2.0.0"
description = "Security Mutation Testing Benchmark for LLM Code Generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SecMutBench Team"}
]
keywords = ["security", "mutation-testing", "benchmark", "llm", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "datasets>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "bandit>=1.7.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
]
all = [
    "secmutbench[dev,llm]",
]

[project.urls]
Homepage = "https://github.com/secmutbench/secmutbench"
Documentation = "https://github.com/secmutbench/secmutbench#readme"
Repository = "https://github.com/secmutbench/secmutbench"

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluation*", "operators*", "scripts*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
